--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -160,7 +160,7 @@
 \newcommand{\iselect}[2]{#1{.}#2}
 
 \newcommand{\itag}{\mathit{tag}}
-\newcommand{\iprod}[3]{#1{:}#2\times#3}
+\newcommand{\iprod}[3]{(#1{:}#2)\times#3}
 \newcommand{\isum}[4]{#1{:}#2+#3{:}#4}
 \newcommand{\iquot}[2]{#1{\bigm/} #2}
 \newcommand{\isubset}[3]{\{#1{:}#2\ |\ #3\}}
