--- a/doc/cie/implementation.tex
+++ b/doc/cie/implementation.tex
@@ -8,18 +8,22 @@ that the input is well-typed (and checks for well-formedness to the
 extent that it is easily decidable), and if successful produces an
 annotated result with all variables explicitly tagged with types. The
 type checking phase uses a system of dependent types, with limited
-subtyping (implicit coercions) for sum types and subset types. The
+subtyping (implicit coercions) for sum types and subset types. 
+\iflong
+The
 details are fairly standard, so are omitted here. One non-obvious
 consequence of the realizability translation, however, is that the
-subset types $\isubset{\ix}{\iS}{\iand{\ipp_1(\ix)}{\ipp_2(\ix)}}$ and
-$\isubset{\ix}{\iS}{\iand{\ipp_2(\ix)}{\ipp_1(\ix)}}$ are not
-equal, but only isomorphic in general. An
+subset types with provably-equal predicates, e.g.,
+$\isubset{\ix}{\iS}{\iand{\ipp_1(\ix)}{\ipp_2(\ix)}}$ and
+$\isubset{\ix}{\iS}{\iand{\ipp_2(\ix)}{\ipp_1(\ix)}}$ are isomorphic
+but not equal in general. An
 explicit coercion is required to go from one type to the other,
-because subset values are pairs containing realizers for
+because subset values will be pairs containing realizers for
 $\iand{\ipp_1(\ix)}{\ipp_2(\ix)}$ and
 $\iand{\ipp_2(\ix)}{\ipp_1(\ix)}$, and these realizers have
 potentially different types $|\ipp_1(\ix)|\mathtt{*}|\ipp_2(\ix)|$ and
 $|\ipp_2(\ix)|\mathtt{*}|\ipp_1(\ix)|$ respectively.
+\fi % \iflong
 
 Next the realizability translation is performed as described in
 Section~\ref{sec:translation}, producing interface code. The
@@ -30,7 +34,9 @@ immediate result of the translation is not easily readable.
  
 Thus, three more passes simplify the output before it is displayed to
 the user. A \emph{thinning} pass removes all references to trivial
-realizers produced by stable formulas. For example, direct translation
+realizers produced by stable formulas.
+\iflong
+For example, direct translation
 of the $\mathtt{free}$ axiom in the output for Kuratowski-finite sets,
 see Figure~\ref{fig:kuratowski} and Section~\ref{sec:finite-sets},
 yields a value specification for $\mathtt{free}$ of type
@@ -51,6 +57,8 @@ realizer. Thinning replaces this by the isomorphic type
 %
 and appropriately modifies references to $\mathtt{free}$ in the assertions to account for this change in type.
 
+\fi % \iflong
+%
 Next, an \emph{optimization} pass applies an ad-hoc collection of
 basic logical and term simplifications in order to make the output more readable. 
 Logical simplifications include applications of truth table rules
@@ -66,15 +74,19 @@ can help significantly.
 
 Finally, the user can specify whether two optional steps occur.
 RZ can optionally performs a \emph{phase-splitting} pass~\cite{harper+:popl90}. 
-This is an ML-specific transformation that replace certain
-uses of parameterized modules (a heavyweight language construct) by
-parameterized types and polymorphic values. The idea is that although
+This is an experimental implementation of an transformation that can replace a functor (a relatively heavyweight language construct) by
+parameterized types and/or polymorphic values. 
+\iflong
+The idea is that although
 functors map modules containing types and terms to other modules containing types
 and terms, constraints on the programming language ensure that output types
 depend only on input types (and not input terms).  Thus, we can split each
 functor into a mapping from input types to output types, and then a separate
 (polymorphic) term mapping input types and terms to an output term.
+\fi
+See Section~\ref{sec:finite-sets} for an example.
 
+\iffalse
 For example (ignoring
 assertions for simplicity) the entire module
 \begin{source}
@@ -83,22 +95,17 @@ module Free : functor (S : Semilattice) ->
                       val free : (A.a -> S.s) -> fin -> S.s
                     end	
 \end{source}   
-appearing in the output of the Kuratowski example can be replaced by the single polymorphic function
-\begin{source}
-val free : 's -> ('s -> 's -> 's) -> (A.a -> 's) -> fin -> 's	
-\end{source}
-which replaces the module parameter \texttt{S} by two extra term arguments term (corresponding to the module components \texttt{S.zero} and \texttt{S.join}) 
-and a type argument \texttt{'s} for the type of lattice elements (corresponding to the module input \texttt{S.s}).
+\fi
+
 
 The other optional transformation is a \emph{hoisting} pass which
-lifts obligations in the output out to top-level positions.  This can
-make it easier to see exactly what one is obliged to provide.  When
-identical obligations appear in separate subterms of a term, hoisting
-can lift and merge these obligations, reducing redundancy.  However,
-moving obligations far from where they are used can make it harder to
-see why the obligation is required at all (and hence how one might
-satisfy the obligation), and so hoisting is turned off by default. See
-Section~\ref{sec:exampl-with-oblig} for examples of hoisting.
+lifts obligations in the output out to top-level positions.  Obligations
+appear in the output inside assertions, at the point where an uncheckable property was needed.
+Moving these obligations to the top-level 
+make it easier to see exactly what one is obliged to verify, and can
+sometimes make them easier to read, at the cost of losing information about
+why the obligation was required at all. See
+Section~\ref{sec:exampl-with-oblig} for an example of hoisting.
 
 %%% Local Variables: 
 %%% mode: latex
